# bae

./: .gitignore  pyproject.toml  readme.md  scratch.py  sims.pt  train.py  train2.py  train_gpt.py
autoencoder/: __init__.py  base.py  baseline.py  biased.py  combined.py  gated.py  lifted.py  mani.py  mixed.py  ordered.py  ordinary.py  rainbow.py  silu.py  vanilla.py
autoencoder/experimental/: baseline.py  biased.py  mani.py
autoencoder/utils/: __init__.py  samplers.py
autoencoder/v1/: combined.py  mixed.py  ordered.py  vanilla.py
autoencoder/v2/: vanilla.py
autoencoders/: __init__.py  base.py  combined.py  ordered.py  vanilla.py
autoencoders/experimental/: lifted.py
autoencoders/utils/: __init__.py  functions.py  hooks.py  (+1 more)
coders/: __init__.py  asym.py  incremental.py  sparse.py  vsparse.py
examples/: manifold.ipynb  manifold.py  norm.py  plot.py  sims.py  sparsity.py  vis.py
figures/: constants.py  cumplot.py  cumulative.py  desmos.py  distribution.py  expansion.py  layers.py  manifold.py  pareto.py  perms.py  sims.py  sparsity.py  test.py
oldcoders/: incremental.py  monarch.py  vanilla.py  wsparse.py
plots/: rayleigh.py
public/: index.html
tutorials/: manifold.ipynb
utils/: __init__.py  feature.py  functions.py  hook.py  manifold.py  maxact.py  muon.py  readme.md  sankey.py  vis.py
workspace/: circuit.py  conditioning.py  convert_files.py  cumulative.py  init.py  load_test.py  loadsave.py.py  manifold.py  manifoldb.py  perms.py  readme.md  reconstruction.py  scartch2.py  scratch.py  scratch3.py  sims2.py  sparsity.py  vis.py  visgpt.py
(+23 files in other folders)
