[project]
name = "bae"
version = "0.1.0"
description = "Bilinear Autoencoders"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "torch",
    "triton",
    "pandas",
    "numpy",
    "einops",
    "opt_einsum",
    "jaxtyping",
    "tqdm",
    "huggingface_hub",
    "safetensors",
    "datasets",
    "transformers",
    "tokenizers",
    "wandb",
    "jupyter",
    "ipykernel",
    "numba>=0.61",
    "quimb",
    "bidict",
    "scikit-learn",
    "plotly",
    "accelerate",
    "matplotlib",
    "cmaes",
]